use of constructor injection